tests/k8s/resources/allow.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ddnsallowlist-allow
spec:
  plugin:
    ddns-allowlist:
      logLevel: TRACE
      sourceRangeHosts:
      - localhost
      # sourceRangeIps:
      # - 1.2.3.4
      # ipStrategy: {}
      lookupInterval: 15
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-allow
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`allow.whoami.localhost`)
    kind: Rule
    services:
    - name: whoami
      port: 80
    middlewares:
    - name: ddnsallowlist-allow
