tests/k8s/resources/default.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`whoami.localhost`)
    kind: Rule
    services:
    - name: whoami
      port: 80
